--- a/templates/cari_jadwal.html
+++ b/templates/cari_jadwal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cari Jadwal Penerbangan fLy.SyRa</title>
-    {# Ini akan menggunakan user_style.css untuk styling form #}
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='user_style.css') }}"> 
     {# Font Awesome CDN untuk ikon #}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
